# quickload

./: lcov.info  pyproject.toml
quickfiles/: __init__.py  quickfiles.py
tests/: test_quickfiles.py
tmp/: testfile.txt
