[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickfiles"
version = "1.0.0"
authors = [
  { name="Kaneryu", email="hello@kan.moe" },
]

description = "Quick loading/saving of files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"

[tool.coverage.run]
source = ["quickfiles"]

[tool.hatch.build.targets.wheel]
packages = ["quickfiles"]

[project.urls]
Homepage = "https://github.com/kaneryu/quickload"
Issues = "https://github.com/kaneryu/quickload/issues"